--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </ol>
       <p>My Work:</p>
         <ul>
-          <li>Javascript Snake game</li>
+          <li><a href="snake-game/index.html">Javascript Snake Game</li>
         </ul>
     </body>
 </html>
